fixed the styling for the footer to be aligned on center both horizontally and vertically

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -10,6 +10,9 @@
     height: 3.125rem;
     margin-top: auto;
     background-color: $background-lightgrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
   @include desktop {
     padding: 3rem;
