--- a/src/pages/InventoryItem/InventoryItem.scss
+++ b/src/pages/InventoryItem/InventoryItem.scss
@@ -3,66 +3,70 @@
 @use "../../styles/partials/variables" as *;
 
 div {
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .box {
-    min-height: 100vh;
-    margin: 0;
-    // position: relative;
+  min-height: 100vh;
+  margin: 0;
+  // position: relative;
+  width: 91.5vw;
+  margin-left: 1rem;
+  border-radius: 5px;
+  background-color: $primary-white;
 }
 
 .mainBox {
-    width: 21.4375rem;
-    height: max-content;
-    // height: 40rem;
-    border-radius: 0.1875rem;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.20);
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 8.375rem;
-    left: 1rem;
+  width: 21.4375rem;
+  height: max-content;
+  // height: 40rem;
+  border-radius: 0.1875rem;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 8.375rem;
+  left: 1rem;
 }
 
 .inventoryItem {
-    box-sizing: border-box;
-    background-color: $primary-white;
-    padding: 1rem 1.5rem 1.5rem 1.5rem;
-    border-top: 1px solid $secondary-cloud;
+  box-sizing: border-box;
+  background-color: $primary-white;
+  padding: 1rem 1.5rem 1.5rem 1.5rem;
+  border-top: 1px solid $secondary-cloud;
 
-    &__container {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 
-    &__subcontainer {
-        display: flex;
-        flex-direction: column;
-        gap: 0.25rem;
-    }
+  &__subcontainer {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+  }
 
-    &__card {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
+  &__card {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 
-    &__subcard {
-        display: flex;
-        gap: 7rem;
-    }
+  &__subcard {
+    display: flex;
+    gap: 7rem;
+  }
 
-    &__title {
-        color: $secondary-slate;
-        font-weight: 400;
-    }
+  &__title {
+    color: $secondary-slate;
+    font-weight: 400;
+  }
 
-    &__detail {
-        color: $primary-inStockBlack;
-        font-weight: 400;
-    }
+  &__detail {
+    color: $primary-inStockBlack;
+    font-weight: 400;
+  }
 }
